test/files/neg/suggest-similar.scala
class Dingus
object Dingus {
  var flippity = 1
}
import Dingus._

class A {
  flippitx = 123
  Nil map identiyt
  new Bingus
}
